# idse-orchestrator

./: .cursorrules  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.claude/hooks/: enforce-agent-mode.sh
.github/workflows/: ci.yml
.idse/: idse.db
.idse/docs/: 02-idse-constitution.md  04-idse-spec-plan-tasks.md  06-idse-implementation-patterns.md  08-getting-started.md  09-metadata-sop.md
.idse/governance/: IDSE_CONSTITUTION.md  IDSE_PIPELINE.md
.idse/tmp/: data_scientist.answers.json  data_scientist.mapped.json  restaurant_blog_writer.generated.spec.md  restaurant_blog_writer.mapped.json
docs/backends/: notion.md
scripts/: migrate_existing_projects.py
src/config/: .idseconfig.json  agent_registry.json
src/idse_orchestrator/: __init__.py  agency_config.py  agency_sync_engine.py  agent_registry.py  agent_router.py  artifact_config.py  artifact_database.py  blueprint_promotion.py  blueprint_wizard.py  cli.py  constitution_rules.py  design_store.py  design_store_mcp.py  design_store_notion.py  (+20 more)
src/idse_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agency_config.py  test_agent_registry.py  test_artifact_config.py  test_artifact_database.py  test_blueprint_claims.py  test_blueprint_integrity.py  test_blueprint_promotion.py  test_cli.py  test_design_store.py  test_design_store_notion.py  test_design_store_sqlite.py  test_file_view_generator.py  test_migration.py  test_session_manager.py  test_sync_engine.py  test_validation_engine_sqlite.py
(+127 files in other folders)
